<resources>
    <string name="units">Units</string>
    <string name="kilometres">Kilometres</string>
    <string name="miles">Miles</string>
</resources>
